# detritalPy

./: .gitignore  README.md  adaptiveKDE.py  detritalFuncs.py  detritalFuncs_v1.0.py  detritalPy concatenator.xlsx  detritalPy_manuscript_v1.0.ipynb  detritalPy_v1.0.ipynb  detritalPy_v1.1.ipynb  environment.yml  pyproject.toml  setup.py
Output/: AgeError_toCSV.csv  Dist_to_CSV.csv  MDA.csv  ageProportions.csv  interSampleComparison.csv  samples.kml
detritalPy/: MDAfuncs.py  __init__.py  adaptiveKDE.py  detritalFuncs.py  detritalMixer.py  detritalPy-mix_v0.1.ipynb  detritalPy-nmf_v0.1.ipynb  detritalPy_v1.2.ipynb  detritalPy_v1.3.ipynb  detritalPy_v1.4.2.ipynb  detritalPy_v1.4.ipynb  nmfFuncs.py  tutorial_dataLoading.ipynb
detritalPy/GSA_2020_short_course/: ExampleDataset_1.xlsx  INPUT_Gehrels et al. (2020) GChron.xlsx  detritalPy_GSA2020.ipynb
detritalPy/GSA_2022_short_course/: ExampleDataset_2.xlsx  INPUT_Blum et al. (2018) Scientific Reports.xlsx
detritalPy/example-data/: Blum et al. (2018) Scientific Reports.xlsx  Book_Cliffs_Data-dPy_input.xlsx  ExampleDataset_2.xlsx  Grand_Canyon_Data-dPy_input.xlsx  Sundell and Saylor (2017) ds02.xlsx
src/detritalPy/: MDAfuncs.py  detritalFuncs.py  detritalMixer.py  detritalPy_v1.4.ipynb  nmfFuncs.py  tutorial_splitAxis.ipynb
src/detritalPy/GSA_2020_short_course/: INPUT_Blum et al. (2018) Scientific Reports.xlsx
src/detritalPy/GSA_2022_short_course/: ExampleDataset_1.xlsx  INPUT_Gehrels et al. (2020) GChron.xlsx  detritalPy_GSA2022.ipynb
src/detritalPy/example-data/: Sundell and Saylor (2017) ds05.xlsx
