[build-system]
requires = ["setuptools>=65.0.0", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { namespaces = false, where = ["src"] }

[project]
name = "detritalpy"
description = "A Python-based toolset for visualizing and analyzing detrital geo-thermochronologic data"
version = "1.4.8"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
authors = [{ name = "Glenn Sharman", email = "gsharman@uark.edu" }]
license = { text = "Apache License 2.0" }
keywords = [
    "detrital",
    "zircon",
    "provenance",
    "stratigraphy",
    "geochronology",
    "thermochronology",
]
dependencies = [
    "folium>=0.18.0",
    "ipykernel>=6.29.5",
    "kdepy>=1.1.12",
    "matplotlib>=3.7.5",
    "matplotlib-inline>=0.1.7",
    "numpy>=1.24.4",
    "openpyxl>=3.1.5",
    "pandas>=2.0.3",
    "peakutils>=1.3.5",
    "scikit-learn>=1.3.2",
    "scipy>=1.10.1",
    "simplekml>=1.3.6",
    "vincent>=0.4.4",
    "xlrd>=2.0.2",
    "xlsxwriter>=3.2.9",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/grsharman/detritalpy"
Download = "https://github.com/grsharman/detritalPy/archive/v1.4.8.tar.gz"
